nodeinfo: add more nodeinfo
The following things can now be controlled domain specific:

Hostname, Hardware-Model, Contact Information, VPN, Latitude and Longitude

--- a/respondd.conf.example
+++ b/respondd.conf.example
@@ -20,6 +20,24 @@ DomainType: batadv
 # Default ddhcpd IPv4 gateway address
 # optional
 IPv4Gateway: 10.116.128.8
+# Hostname to advertise
+# optional, default is the system hostname
+Hostname: gw01
+# Hardware used by the system
+# optional, default is None
+Hardware-Model: KVM VirtualMachine
+# Contact information of owner
+# optional, default is None
+Contact: info@example.org
+# Latitude of the system
+# optional, default is None
+Latitude: 50.478083306
+# Longitude of the system
+# optional, default is None
+Longitude: 12.335736752
+# Is the system considered an gateway
+# optional, default is True
+VPN: True
 
 # A domain
 # User your own domain name here
@@ -43,5 +61,23 @@ Interfaces: mvpn-ffki
 # IPv4 gateway option for ddhcpd
 # optional, default: @IPv4Gateway
 IPv4Gateway: 10.116.128.8
+# Hostname to advertise
+# optional, default: @Hostname
+Hostname: ffki.gw01
+# Hardware used by the system
+# optional, default: @Hardware-Model
+Hardware-Model: KVM VirtualMachine
+# Contact information of owner
+# optional, default: @Contact
+Contact: ffki@example.org
+# Latitude of the system
+# optional, default: @Latitude
+Latitude: 50.478083306
+# Longitude of the system
+# optional, default: @Longitude
+Longitude: 12.335736752
+# Is the system considered a gateway
+# optional, default: @VPN
+VPN: True
 
 # An arbitrary number of further domains may follow here
